# MimoHuman

./: .gitignore  README.md  pyproject.toml
examples/: basic_agent.py  tui_demo.py
prompts/: build_todolist.md  classify_input.md  comfuse.md  evaluate_completion.md  predict_followup.md  soul.md
src/mimohuman/: __init__.py
src/mimohuman/core/: __init__.py  agent.py  config.py  confusion.py  conversation.py  exceptions.py  hooks.py  memory.py  message.py  orchestrator.py  provider.py  provider_registry.py  tool.py
src/mimohuman/providers/: __init__.py  anthropic_provider.py  openai_provider.py
src/mimohuman/tui/: __init__.py  app.py  controller.py
src/mimohuman/tui/screens/: __init__.py  chat_screen.py  help_screen.py  settings_screen.py
src/mimohuman/tui/widgets/: __init__.py  agent_status.py  chat_view.py  input_bar.py  markdown_content.py  response_status.py  thinking_display.py  tool_call_display.py
tests/: conftest.py
tests/core/: test_agent.py  test_confusion.py  test_conversation.py  test_hooks.py  test_message.py  test_provider.py  test_tool.py
tests/providers/: test_anthropic_provider.py
