[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mimohuman"
version = "0.1.0"
description = "Generic AI Agent framework with TUI frontend"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "MimoHuman Authors"},
]
keywords = ["ai", "agent", "llm", "tui", "textual"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
providers = [
    "mimohuman[anthropic,openai]",
]
tui = [
    "textual>=0.70",
    "rich>=13.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "mypy>=1.0",
]
all = [
    "mimohuman[providers,tui,dev]",
]

[project.scripts]
mimohuman = "mimohuman.tui.app:main"

[project.urls]
Homepage = "https://github.com/example/mimohuman"
Repository = "https://github.com/example/mimohuman.git"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
